--- a/osa4/package.json
+++ b/osa4/package.json
@@ -13,11 +13,14 @@
   "author": "Kai Larikka",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.8",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^5.9.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.1",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.0",
