--- a/osa5/bloglist-frontend/package.json
+++ b/osa5/bloglist-frontend/package.json
@@ -16,7 +16,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "json-server -p3003 db.json",
-    "eslint": "eslint ."
+    "eslint": "eslint .",
+    "cypress:open": "cypress open",
+    "test:e2e": "cypress run"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,10 +35,12 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3003",
+  "proxy": "http://localhost:3001",
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
+    "cypress": "^4.0.2",
+    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-jest": "^23.8.0"
   }
 }
