--- a/osa6/redux-anecdotes/package.json
+++ b/osa6/redux-anecdotes/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "eslint": "eslint ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,6 +40,8 @@
   },
   "devDependencies": {
     "deep-freeze": "0.0.1",
+    "eslint": "^6.8.0",
+    "eslint-plugin-jest": "^23.8.1",
     "redux-devtools-extension": "^2.13.8"
   }
 }
